--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,13 +1,39 @@
 plugins {
     id 'java'
+    id 'java-library'
     id 'jacoco'
 }
 
 repositories {
-    // Specify the repository mirror that we want to download our dependencies from. JCentral is configured by default when creating a new Gradle project.
     jcenter()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+     reports {
+        xml.enabled = true
+        csv.enabled = true
+        html.enabled = true
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.95
+            }
+        }
+    }
 }
