--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "svelte-range-slider-pips": "^2.0.3"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-local-storage-store": "^0.2.6"
   }
 }
