--- a/api/build.gradle
+++ b/api/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
+    implementation files('lib/mysql-connector-java-8.0.28.jar')
 }
 
 application {
